Infrastructure: One more try at `--release 11`